--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,13 +1,18 @@
-
 server {
     listen 80 default_server;
-    server_name 54.144.250.113;
-    location = /favicon.ico { access_log off; log_not_found off; }
-    location /staticfiles/ {
-        root /home/ubuntu/blogprojectdrf;
+    server_name 13.48.217.164;
+
+    location = /favicon.ico {
+        access_log off;
+        log_not_found off;
     }
+
+    location /staticfiles/ {
+        alias /home/ubuntu/peace_online/staticfiles/;
+    }
+
     location / {
-        include proxy_params;
+        include /etc/nginx/proxy_params;
         proxy_pass http://unix:/run/gunicorn.sock;
     }
 }
