media files storage changed

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,7 +12,7 @@ server {
     }
 
     location /media/ {
-        alias /var/www/peace_online/media/;
+        alias /var/www/media/;
     }
 
     location / {
