new items folder added

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,7 +12,7 @@ server {
     }
 
     location /media/ {
-        alias /var/www/media/;
+        alias /var/www/media/item_images;
     }
 
     location / {
