--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,6 +2,8 @@ server {
     listen 80 default_server;
     server_name 13.48.217.164;
 
+    client_max_body_size 50M;
+
     location = /favicon.ico {
         access_log off;
         log_not_found off;
